--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -1,6 +1,22 @@
 .section {
-  padding: 8rem 0 7rem;
-  text-align: center;
+    padding: 8rem 0 7rem;
+    text-align: center;
+}
+
+.hide{
+    display:none;
+}
+
+.show{
+    display:block;
+}
+
+.fade{
+    -webkit-transition: opacity 1s ease-in-out;
+    -moz-transition: opacity 1s ease-in-out;
+    -o-transition: opacity 1s ease-in-out;
+    -ms-transition: opacity 1s ease-in-out;
+    transition: opacity 1s ease-in-out;
 }
 
 .flip-horizontally {
